# Perun

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  run_web_demo.sh  test_client.py  verify_phase6.sh
.agent/workflows/: build_wasm_client.md
.github/workflows/: ci.yml
bindings/python/: perun.py
docs/planning/: architecture_overview.md  implementation_plan.md
examples/: main.cpp
examples/python/: chip8.py  simple_client.py  terminal_client.py
include/Perun/Audio/: Audio.h
include/Perun/C/: perun_c.h
include/Perun/Client/: Client.h
include/Perun/Core/: Window.h
include/Perun/Graphics/: Buffers.h  Framebuffer.h  Renderer.h  Shader.h  Texture.h
include/Perun/ImGui/: ImGuiLayer.h
include/Perun/Math/: Matrix4.h  Vector2.h
include/Perun/Protocol/: Handshake.h  Packets.h
include/Perun/Server/: Server.h
include/Perun/Transport/: ITransport.h  TCPTransport.h  UnixTransport.h  WebSocketTransport.h
perun-cli/: Cargo.toml
perun-cli/src/: main.rs
perun-client/: Cargo.toml
perun-client/src/: lib.rs
perun-client/www/: index.html
perun-core/: Cargo.toml
perun-core/src/: lib.rs
perun-protocol/: Cargo.toml
perun-protocol/src/: handshake.rs  lib.rs  packets.rs
perun-server/: Cargo.toml
perun-server/src/: lib.rs  main.rs  processor.rs  server.rs  shm.rs
perun-server/src/transport/: tcp.rs  websocket.rs
sdk/python/: README.md  setup.py
sdk/python/examples/: test_core.py
sdk/python/perun_sdk/: __init__.py  connection.py  protocol.py
server/: Cargo.toml
server/src/: lib.rs  main.rs  server.rs
server/src/protocol/: handshake.rs  mod.rs  packets.rs
server/src/transport/: mod.rs  websocket.rs
src/Audio/: Audio.cpp
src/C/: perun_c.cpp
src/Client/: Client.cpp  main.cpp
src/Core/: Engine.cpp  Window.cpp
src/Graphics/: Framebuffer.cpp  Renderer.cpp  Shader.cpp  Texture.cpp
src/ImGui/: ImGuiLayer.cpp
src/Protocol/: Handshake.cpp  Packets.cpp
src/Server/: Server.cpp  main.cpp
src/Transport/: CryptoUtils.h  TCPTransport.cpp  UnixTransport.cpp  WebSocketTransport.cpp
tests/c_shim/: test.c
tests/conformance/: conformance_suite.py
tests/integration/: IntegrationClient.cpp
tests/misc/: check_ws.py
tests/tools/: mock_core.py
tests/unit/: AudioTests.cpp  FramebufferTests.cpp  Matrix4Tests.cpp  RendererTests.cpp  TextureTests.cpp  Vector2Tests.cpp
tests/unit/protocol/: HandshakeTests.cpp  PacketsTests.cpp
tests/unit/transport/: TCPTransportTests.cpp  UnixTransportTests.cpp
web/: client.js  index.html  protocol.js
