[package]
name = "perun-server"
version = "0.1.0"
edition = "2021"
description = "Perun display server - Rust implementation"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1"
bytes = "1"
perun-shm = { path = "../cores/shm" }
perun-protocol = { path = "../perun-protocol" }
memmap2 = "0.7"
lz4_flex = { version = "0.11", default-features = false, features = ["std"] }
bytemuck = "1.16"

[dev-dependencies]
tokio-test = "0.4"
