[package]
name = "perun-server"
version = "0.1.0"
edition = "2021"
description = "Perun display server - Rust implementation"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1"
bytes = "1"

[dev-dependencies]
tokio-test = "0.4"
